# twat-search

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP.txt  HISTORY.md  LOG.md  NEXTENGINES.md  PROGRESS.md  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  SETUP_CI_CD.md  TODO.md  VERSION.txt  build.sh  cleanup.py  debug_fetch.py  falla_search.py  google_debug_Python_programming_language.html  google_debug_test_query.html  install.sh  publish.sh  pyproject.toml  pyproject_next.md  pyproject_next.toml  requirements.txt  research.txt  test_async_falla.py  test_falla.py  test_google_falla_debug.py  test_simple.py  test_sync_falla.py  twat_search.txt
.cursor/rules/: 0project.mdc  cleanup.mdc  filetree.mdc
.github/workflows/: pre-release.yml.template  push-enhanced.yml.template  push.yml  release-enhanced.yml.template  release.yml
.specstory/: history.txt
.specstory/history/: .what-is-this.md  2025-02-25_01-58-creating-and-tracking-project-tasks.md  2025-02-25_02-17-project-task-continuation-and-progress-update.md  2025-02-25_02-24-planning-tests-for-twat-search-web-package.md  2025-02-25_02-27-implementing-tests-for-twat-search-package.md  2025-02-25_02-58-transforming-python-script-into-cli-tool.md  2025-02-25_03-09-generating-a-name-for-the-chat.md  2025-02-25_03-33-untitled.md  2025-02-25_03-54-integrating-search-engines-into-twat-search.md  2025-02-25_04-05-consolidating-you-py-and-youcom-py.md  2025-02-25_04-05-untitled.md  2025-02-25_04-13-missing-env-api-key-names-in-pplx-py.md  2025-02-25_04-16-implementing-functions-for-brave-search-engines.md  2025-02-25_04-48-unifying-search-engine-parameters-in-twat-search.md  2025-02-25_05-36-implementing-duckduckgo-search-engine.md  2025-02-25_05-43-implementing-the-webscout-search-engine.md  2025-02-25_05-43-untitled.md  2025-02-25_06-07-implementing-bing-scraper-engine.md  2025-02-25_06-12-continuing-bing-scraper-engine-implementation.md  2025-02-25_06-34-implementing-safe-import-patterns-in-modules.md  2025-02-25_07-09-refactoring-plan-and-progress-update.md  2025-02-25_07-09-untitled.md  2025-02-25_07-17-implementing-phase-1-from-todo-md.md  2025-02-25_07-34-integrating-hasdata-google-serp-apis.md  2025-02-25_08-19-implementing-search-engines-from-nextengines-md.md  2025-02-26_09-54-implementing-plain-option-for-search-commands.md  2025-02-26_10-55-standardizing-engine-naming-conventions.md  2025-02-26_11-30-untitled.md  2025-02-26_12-11-update-config-py-to-use-engine-constants.md  2025-02-26_12-18-update-engine-imports-and-exports-in-init-py.md  2025-02-26_13-40-search-engine-initialization-errors.md  2025-02-26_14-15-codebase-issue-analysis-and-fix-plan.md  2025-02-26_14-52-resolving-critical-issues-in-todo-md.md  2025-02-26_17-48-progress-update-for-twat-search-project.md  2025-02-26_18-28-fixing-num-results-parameter-in-twat-search.md  2025-02-26_18-44-fixing-search-engine-issues-in-codebase.md  2025-02-26_19-37-removing-anywebsearch-references-from-codebase.md  2025-02-26_19-49-fixing-linting-errors-in-code.md  2025-02-26_20-02-analyzing-todo-md-and-updating-progress-md.md  2025-02-26_22-55-bing-scraper-result-inconsistency-investigation.md  (+12 more)
REVIEW/: FILES-cla.md  FILES-cod.md  TODO-cla.md  TODO-cod.md  filesystem_tree.txt
debug_output/: qwant_analysis.txt  qwant_content.html  yahoo_analysis.txt  yahoo_content.html
docs/: modules.rst  twat_search.paths.rst  twat_search.rst  twat_search.web.api.rst  twat_search.web.cli.rst  twat_search.web.config.rst  twat_search.web.engine_constants.rst  twat_search.web.engines.base.rst  twat_search.web.engines.bing_scraper.rst  twat_search.web.engines.brave.rst  twat_search.web.engines.critique.rst  twat_search.web.engines.duckduckgo.rst  twat_search.web.engines.falla.rst  twat_search.web.engines.google_scraper.rst  twat_search.web.engines.hasdata.rst  twat_search.web.engines.lib_falla.core.aol.rst  twat_search.web.engines.lib_falla.core.ask.rst  twat_search.web.engines.lib_falla.core.bing.rst  twat_search.web.engines.lib_falla.core.dogpile.rst  twat_search.web.engines.lib_falla.core.duckduckgo.rst  twat_search.web.engines.lib_falla.core.falla.rst  twat_search.web.engines.lib_falla.core.fetch_page.rst  twat_search.web.engines.lib_falla.core.gibiru.rst  twat_search.web.engines.lib_falla.core.google.rst  twat_search.web.engines.lib_falla.core.mojeek.rst  twat_search.web.engines.lib_falla.core.qwant.rst  twat_search.web.engines.lib_falla.core.rst  twat_search.web.engines.lib_falla.core.searchencrypt.rst  twat_search.web.engines.lib_falla.core.startpage.rst  twat_search.web.engines.lib_falla.core.yahoo.rst  twat_search.web.engines.lib_falla.core.yandex.rst  twat_search.web.engines.lib_falla.main.rst  twat_search.web.engines.lib_falla.rst  twat_search.web.engines.lib_falla.settings.rst  twat_search.web.engines.lib_falla.utils.rst  twat_search.web.engines.pplx.rst  twat_search.web.engines.rst  twat_search.web.engines.serpapi.rst  twat_search.web.engines.tavily.rst  twat_search.web.engines.you.rst  (+4 more)
resources/: pricing.md
resources/brave/: brave.md  brave_image.md  brave_news.md  brave_video.md
resources/pplx/: pplx.md  pplx_urls.txt
resources/you/: you.md  you.txt  you_news.md  you_news.txt
scripts/: build.sh  release.sh  test.sh
src/twat_search/: __init__.py  __main__.py  paths.py
src/twat_search/web/: __init__.py  api.py  api_transport.py  browser.py  browser_transport.py  cli.py  config.py  engine_constants.py  example.py  exceptions.py  llm.py  llm_transport.py  models.py  provider_catalog.py  routes.py  scraper_transport.py  transports.py  utils.py
tests/: conftest.py  test_async_falla.py  test_cli.py  test_falla.py  test_google_falla_debug.py  test_package.py  test_simple.py  test_sync_falla.py  test_twat_search.py
tests/fixtures/browser/: google_captcha.html  qwant_consent.html
tests/unit/: __init__.py  mock_engine.py
tests/unit/web/: __init__.py  test_api.py  test_browser.py  test_cli_engine_info.py  test_config.py  test_exceptions.py  test_llm.py  test_models.py  test_provider_catalog.py  (+4 more)
tests/web/: test_bing_scraper.py  test_webscout.py
(+1541 files in other folders)
